ingress/argocd-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-ui
  namespace: gitops-system
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
    - hosts:
        - argocd.gitops.local
      secretName: argocd-ui-ingress-tls
  rules:
    - host: argocd.gitops.local
      http:
        paths:
          - path: /
            backend:
              serviceName: argocd-server
              servicePort: http
